All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/SVMX_Jobs__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object tracks various jobs that are launched from ServiceMax such as the OptiMax dispatch optimization job.</description>
    <label>ServiceMax Job</label>
    <nameField>
        <displayFormat>SJ-{00000000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>