All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Current age of the job. Used to abort zombie jobs</description>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>