All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job__c</fullName>
    <description>Used to store the Batch job Id to track and kill the process if batch execution takes place for longer time.</description>
    <inlineHelpText>Used to store the Batch job Id to track and kill the process if batch execution takes place for longer time.</inlineHelpText>
    <label>Batch Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>