All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Time when job ended</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>