All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that initiated the job</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OptiMax_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>