All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/OptiMax_Message__c.field-meta.xml
<CustomField>
    <fullName>OptiMax_Message__c</fullName>
    <label>Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>