All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Sent_Events_Count__c.field-meta.xml
<CustomField>
    <fullName>Sent_Events_Count__c</fullName>
    <label>Number Of Sent Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>