All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Sent_Resources__c.field-meta.xml
<CustomField>
    <fullName>Sent_Resources__c</fullName>
    <description>Number of technicians sent to the job</description>
    <label>Number Of Sent Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>