All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Sent_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Sent_Work_Orders__c</fullName>
    <description>Number of work orders sent to the job</description>
    <label>Number Of Sent Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>