All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <description>Total distance of all routes calculated by the job</description>
    <label>Total Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>