All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Total_Driving_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Driving_Time__c</fullName>
    <description>Total driving time for all resources scheduled by the job</description>
    <label>Total Driving Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>