All_Component_DX/force-app/main/default/objects/SVMX_Jobs__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Job type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Incremental</fullName>
            </value>
            <value>
                <fullName>Scheduled SFM</fullName>
            </value>
            <value>
                <fullName>Push-Upgrade</fullName>
            </value>
            <value>
                <fullName>Auto-Configurator</fullName>
            </value>
            <value>
                <fullName>Configuration Migration Tool</fullName>
            </value>
            <value>
                <fullName>LTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>